add category to osc and oss table - order osc table by last updated project

--- a/_data/i18n/tables.yml
+++ b/_data/i18n/tables.yml
@@ -5,6 +5,9 @@ administration:
 administrations:
   en: Administrations
   fr: Administrations
+category:
+  en: Category
+  fr: Catégorie
 clear:
   en: Clear
   fr: Effacer
