improve osc and oss forms

--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -208,8 +208,8 @@ presets:
         en: The SPDX License identifier - Search the List of licenses <a href="https://spdx.org/licenses/" target="_blank">List of licences</a>.
         fr: Identifiant SPDX de la licence - Consultez la liste des licenses <a href="https://spdx.org/licenses/" target="_blank">Liste des licences</a>.
     infobulle:
-      en: Add general information about the project licenses. Search the list of lisences to find the SPDX license identifier according to your license's name.
-      fr: Ajouter des informations générales sur chaque licence du projet. Choisir l'identifiant SPDX de la licence utilisée selon son nom, en consultant la liste des licences.
+      en: Search the list of lisences to find the SPDX license identifier according to your license's name. Add the URL of your project license repository.
+      fr: Choisir l'identifiant SPDX de la licence utilisée selon son nom, en consultant la liste des licences. Ajouter le URL de license de votre projet.
     titles:
       URL:
         en: The English and French URLs of licence.
