Added functionnality for merge partners

--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -235,7 +235,12 @@ presets:
       en: Key Partners
       fr: Partenaires
     labels:
-      email: *email
+      contactemail:
+        en: Contact email
+        fr: Add
+      contactname:
+        en: Contact name
+        fr: Nom du contact
       name:
         en:
           en: English name
