change page file names

--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -48,7 +48,7 @@ nav:
     en: Open Standard
     fr: Norme ouverte
     link:
-      en: ./open-source-standards.html
+      en: ./open-standards.html
       fr: ./normes-ouvertes.html
   doc:
     en: Documentation
